Add generics.